<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/circle_background"
    android:backgroundTint="@color/teal_200"
    android:layout_margin="5dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/users_profileimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_toRightOf="@+id/users_profileimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp">
    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/userBioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    </LinearLayout>

</RelativeLayout>